# clamsap

./: .gitignore  AUTHORS  COPYING  COPYING.cscompr  COPYING.vsa  ChangeLog  Makefile.am  NEWS  README  autogen.sh  clamsap.spec  configure.ac
.github/workflows/: c-cpp.yml
include/: vsaxxtyp.h
scripts/: rpm_build.sh
src/: Makefile.am  Makefile.in  csdecompr.c  csdecompr.h  vsclam.c  vsclam.h  vsclam.rc  vsclam.sln  vsclam.vcproj  vsclam.vcxproj  vsclam.vcxproj.filters  vsclamd.c  vsclamd.h  vsclamd.rc  vsclamd.vcproj  vsclamd.vcxproj  vsclamd.vcxproj.filters  vsmime.c  vsmime.h
